--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1{
+            color: fuchsia;
+        }
+    </style>
 </head>
 <body>
     hello world!
+
+    <h1>dksopfd</h1>
 </body>
 </html>
